--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,15 +13,15 @@
     <% if @minimum_password_length %>
       <small class="text-muted">(<%= @minimum_password_length %> characters minimum)</small>
     <% end %>
-    <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
+    <%= f.password_field :password, autocomplete: 'off', class: 'form-control' %>
   </div>
 
   <div class="form-group">
     <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
+    <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control' %>
   </div>
 
-  <%= f.submit "Sign up", class: 'btn btn-primary' %>
+  <%= f.submit 'Sign up', class: 'btn btn-primary' %>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%= render 'devise/shared/links' %>
