--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -4,11 +4,12 @@
   <div class="card-block">
     <div class="row">
       <div class="col-md-1">
-        <%= gravatar_for message.user %>
+        <%= image_tag message.user.avatar.url(:thumb) %>
       </div>
       <div class="col-md-11">
         <p class="card-text">
-          <span class="text-muted"><%= message.user.name %> at <%= message.timestamp %> says</span><br>
+          <%#<span class="text-muted"><%= message.user.name  at <%= message.timestamp  says</span><br>%>
+          <span class="text-muted"><%= message.user.name %> <%= time_ago_in_words(message.timestamp) %> ago</span><br>
           <%= message.body %>
         </p>
       </div>
