--- a/app/views/chat_rooms/new.html.erb
+++ b/app/views/chat_rooms/new.html.erb
@@ -1,10 +1,21 @@
 <h1>Add chat room</h1>
 
 <%= form_for @chat_room do |f| %>
+
   <div class="form-group">
     <%= f.label :title %>
     <%= f.text_field :title, autofocus: true, class: 'form-control' %>
   </div>
+
+  <%= hidden_field_tag 'chat_room[user_ids][]', current_user.id %>
+  <% User.all.each do |user| %>
+    <% if user.id != current_user.id %>
+      <div class="form-group">
+        <%= check_box_tag 'chat_room[user_ids][]', user.id %>
+        <%= user.name %>
+      </div>
+    <% end %>
+  <% end %>
 
   <%= f.submit 'Add!', class: 'btn btn-primary' %>
 <% end %>
