--- a/app/views/chat_rooms/new.html.erb
+++ b/app/views/chat_rooms/new.html.erb
@@ -7,28 +7,4 @@
   </div>
 <% end %>
 
-<%= form_for @chat_room do |f| %>
-
-  <div class="form-group">
-    <%= f.label :title %>
-    <%= f.text_field :title, autofocus: true, class: 'form-control' %>
-    <%- if @chat_room.errors[:title].any? %>
-      <span class="badge bg-danger">
-        <%= @chat_room.errors[:title].first %>
-      </span>
-    <% end %>
-  </div>
-
-  <%= hidden_field_tag 'chat_room[user_ids][]', current_user.id %>
-  <%= f.label 'Add some Users' %>
-  <% User.all.each do |user| %>
-    <% if user.id != current_user.id %>
-      <div class="form-group">
-        <%= check_box_tag 'chat_room[user_ids][]', user.id %>
-        <%= user.name %>
-      </div>
-    <% end %>
-  <% end %>
-
-  <%= f.submit 'Add!', class: 'btn btn-primary' %>
-<% end %>
+<%= render 'form' %>
