--- a/app/views/chat_rooms/show.html.erb
+++ b/app/views/chat_rooms/show.html.erb
@@ -1,10 +1,18 @@
-<h1><%= @chat_room.title %></h1>
+<div class="container">
+  <div class="row">
+    <div class="col-9">
+      <h1><%= @chat_room.title %></h1>
+    </div>
+    <div class="col-3">
+      <%= link_to 'Edit chat', edit_chat_room_path(@chat_room)%>
+    </div>
+  </div>
+</div>
+
 
 <div id="messages" data-chat-room-id="<%= @chat_room.id %>">
   <%= render @chat_room.messages %>
 </div>
-
-<hr>
 
 <%= form_for @message, url: '#' do |f| %>
   <%= hidden_field_tag 'chat_room_id', @chat_room.id %>
@@ -14,11 +22,18 @@
     <small class="text-muted">From 2 to 1000 characters</small>
   </div>
 
-  <%= f.submit 'Post', class: 'btn btn-primary btn-lg' %>
+  <div class="container">
+    <div class="row">
+      <div class="col-9">
+        <%= f.submit 'Post', class: 'btn btn-primary btn-lg' %>
+      </div>
 
 <% end %>
-
-<%= form_tag({:action => 'update'}, method: :patch) do %>
-    <%= hidden_field_tag 'chat_room_id', @chat_room.id %>
-    <%= submit_tag 'Leave chat', name: 'leave', class: 'btn btn-danger btn-lg pull-xs-right' %>
-<% end %>
+      <div class="col-3">
+      <%= form_tag({:action => 'update'}, method: :patch) do %>
+          <%= hidden_field_tag 'chat_room_id', @chat_room.id %>
+          <%= submit_tag 'Leave chat', name: 'leave', class: 'btn btn-danger pull-xs-right', data: {confirm: 'Are you sure?'}%>
+      <% end %>
+      </div>
+    </div>
+  </div>
