--- a/app/views/chat_rooms/_form.html.erb
+++ b/app/views/chat_rooms/_form.html.erb
@@ -21,5 +21,5 @@
         <% end %>
     <% end %>
 
-    <%= f.submit 'Add!', class: 'btn btn-primary' %>
+    <%= f.submit 'Save!', class: 'btn btn-primary' %>
 <% end %>
