--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <% if user_signed_in? %>
         <% if current_user.role == 'ADMIN' %>
           <li class="nav-item active">
-            <%= link_to 'Admin stuff', users_path, class: 'nav-link' %>
+            <%= link_to 'Site Stats', charts_path, class: 'nav-link' %>
           </li>
         <% end %>
         <li class="nav-item active">
