--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,12 @@
 
     <ul class="nav navbar-nav pull-xs-right">
       <% if user_signed_in? %>
-        <% if current_user.role == 'ADMIN' %>
+        <% if current_user.admin %>
           <li class="nav-item active">
             <%= link_to 'Site Stats', charts_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item active">
+            <%= link_to 'Admin Panel', class: 'nav-link' %>
           </li>
         <% end %>
         <li class="nav-item active">
