--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
             <%= link_to 'Site Stats', charts_path, class: 'nav-link' %>
           </li>
           <li class="nav-item active">
-            <%= link_to 'Admin Panel', class: 'nav-link' %>
+            <%= link_to 'Admin Panel', rails_admin_path, class: 'nav-link' %>
           </li>
         <% end %>
         <li class="nav-item active">
